--- a/button-vue.html
+++ b/button-vue.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>button-vue</title>
 </head>
 <body>
     <div id="app">
-        <button-counter v-for="(item, index) in 100" :key="index"></button-counter>
+        <button-counter v-for="(item, index) in 10000" :key="index"></button-counter>
     </div>
     <script>
         console.time('time');
